tests/fixtures/invalid/max_bytes_bool.py
# Cannot call max() with Bytes, Bool
x = max(b"hello", True)
